[gd_scene load_steps=3 format=2]

[ext_resource path="res://TabScreens/GalaxyMap/GalaxyMapControls/Search.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.505882 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.32549, 0.32549, 0.32549, 0.784314 )

[node name="Search" type="LineEdit"]
anchor_right = 0.665
margin_top = 8.0
margin_right = 0.199951
margin_bottom = 33.0
focus_mode = 1
custom_styles/normal = SubResource( 1 )
placeholder_text = "Search by system name"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupMenuFound" type="PopupMenu" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 58.0
items = [ "Item 0", null, 0, false, false, 0, 0, null, "", false, "Item 1", null, 0, false, false, 1, 0, null, "", false ]
hide_on_state_item_selection = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_changed" from="." to="." method="_on_Search_text_changed"]
[connection signal="text_entered" from="." to="." method="_on_Search_text_entered"]
[connection signal="id_pressed" from="PopupMenuFound" to="." method="_on_PopupMenuFound_id_pressed"]
